--- a/style.css
+++ b/style.css
@@ -1,137 +1,163 @@
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+
 /* Document
    ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
- html {
+
+html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Sections
    ========================================================================== */
+
 /**
  * Remove the margin in all browsers.
  */
+
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
+
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0;
+}
 
 /* Grouping content
    ========================================================================== */
+
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
+
 hr {
   box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
   overflow: visible;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
+
 pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Text-level semantics
    ========================================================================== */
+
 /**
  * Remove the gray background on active links in IE 10.
  */
+
 a {
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
+
 abbr[title] {
   border-bottom: none;
   /* 1 */
   text-decoration: underline;
   /* 2 */
   text-decoration: underline dotted;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-b,
-strong {
-  font-weight: bolder; }
+
+b, strong {
+  font-weight: bolder;
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-code,
-kbd,
-samp {
+
+code, kbd, samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font size in all browsers.
  */
+
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-sub,
-sup {
+
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 /* Embedded content
    ========================================================================== */
+
 /**
  * Remove the border on images inside links in IE 10.
  */
+
 img {
-  border-style: none; }
+  border-style: none;
+}
 
 /* Forms
    ========================================================================== */
+
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-button,
-input,
-optgroup,
-select,
-textarea {
+
+button, input, optgroup, select, textarea {
   font-family: inherit;
   /* 1 */
   font-size: 100%;
@@ -139,59 +165,61 @@ textarea {
   line-height: 1.15;
   /* 1 */
   margin: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-button,
-input {
+
+button, input {
   /* 1 */
-  overflow: visible; }
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-button,
-select {
+
+button, select {
   /* 1 */
-  text-transform: none; }
+  text-transform: none;
+}
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; }
+
+button, [type="button"], [type="reset"], [type="submit"] {
+  -webkit-appearance: button;
+}
 
 /**
  * Remove the inner border and padding in Firefox.
  */
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+
+button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText; }
+
+button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
 
 /**
  * Correct the padding in Firefox.
  */
+
 fieldset {
-  padding: 0.35em 0.75em 0.625em; }
+  padding: 0.35em 0.75em 0.625em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -199,6 +227,7 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
+
 legend {
   box-sizing: border-box;
   /* 1 */
@@ -211,118 +240,138 @@ legend {
   padding: 0;
   /* 3 */
   white-space: normal;
-  /* 1 */ }
+  /* 1 */
+}
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
+
 progress {
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
+
 textarea {
-  overflow: auto; }
+  overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"],
-[type="radio"] {
+
+[type="checkbox"], [type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+
+[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
+
 [type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
+
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
+
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Interactive
    ========================================================================== */
+
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
+
 details {
-  display: block; }
+  display: block;
+}
 
 /*
  * Add the correct display in all browsers.
  */
+
 summary {
-  display: list-item; }
+  display: list-item;
+}
 
 /* Misc
    ========================================================================== */
+
 /**
  * Add the correct display in IE 10+.
  */
+
 template {
-  display: none; }
+  display: none;
+}
 
 /**
  * Add the correct display in IE 10.
  */
+
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 /* Easings
    ========================================================================== */
 
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   box-sizing: border-box;
-  outline: none; }
+  outline: none;
+}
 
-
-html,
-body {
+html, body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  height: 100vh;   
-  overflow:  hidden;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
   /* Remove the copy option in this page */
- /* -webkit-touch-callout: none; /* iOS Safari */
- /* -webkit-user-select: none;   /* Chrome/Safari/Opera */
- /* -khtml-user-select: none;    /* Konqueror */
- /* -moz-user-select: none;      /* Firefox */
- /* -ms-user-select: none;       /* Internet Explorer/Edge */
- /* user-select: none;           /* Non-prefixed version, currently not supported by any browser */
+  /* -webkit-touch-callout: none; /* iOS Safari */
+  /* -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  /* -khtml-user-select: none;    /* Konqueror */
+  /* -moz-user-select: none;      /* Firefox */
+  /* -ms-user-select: none;       /* Internet Explorer/Edge */
+  /* user-select: none;           /* Non-prefixed version, currently not supported by any browser */
 }
-
 
 /*--------------------Content--------------------*/
 
@@ -335,35 +384,35 @@ body {
   text-align: start;
 }
 
-.title-main{
+.title-main {
   text-decoration: none;
   font-weight: 400;
   color: #121212;
   font-size: 25px;
 }
 
-.title-main span{
+.title-main span {
   font-weight: bold;
 }
 
-.contact{
+.contact {
   position: absolute;
   box-sizing: border-box;
   text-align: start;
 }
 
-.contact h3{
+.contact h3 {
   text-decoration: none;
   font-weight: 900;
   color: #121212;
 }
 
 .icons {
-  display: flex;  
+  display: flex;
   margin: 20px 0;
+}
 
-  }
-  .icons a {
+.icons a {
   width: 50px;
   height: 50px;
   justify-content: center;
@@ -371,53 +420,57 @@ body {
   color: #464646;
   font-size: 30px;
   transition: 0.4s;
-  }
-  .icons a:hover {
-  color: #121212;
-  
 }
 
-.contact .contact-subtitle{
+.icons a:hover {
+  color: #121212;
+}
+
+.icons .hubr {
+  border-radius: 50%;
+}
+
+.contact .contact-subtitle {
   padding-bottom: 20px;
 }
-
 
 /*--------------------Contact--------------------*/
 
 .Link {
   display: inline-block;
   position: relative;
-  font-weight: 700; 
+  font-weight: 700;
 }
-  .Link::after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    height: 0.08em;
-    width: 100%;
-    background-color: #000;
-    transform: scale3d(0, 1, 1);
-    transform-origin: 100% 50%;
-    transition: transform 0.8s cubic-bezier(0.165, 0.84, 0.44, 1); 
-  }
-    .Link:hover::after {
-      transform: scale3d(1, 1, 1);
-      transform-origin: 0% 50%; 
-    }
-  .Link--small::after {
-    height: 1px;
-    transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transform: scale3d(0, 1, 1);
-    transform-origin: 100% 50%; 
-  }
 
-    .Link--small:hover::after {
-      transform: scale3d(1, 1, 1);
-     transform-origin: 0% 50%; 
-    }
-    
+.Link::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  height: 0.08em;
+  width: 100%;
+  background-color: #000;
+  transform: scale3d(0, 1, 1);
+  transform-origin: 100% 50%;
+  transition: transform 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 
+.Link:hover::after {
+  transform: scale3d(1, 1, 1);
+  transform-origin: 0% 50%;
+}
+
+.Link--small::after {
+  height: 1px;
+  transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transform: scale3d(0, 1, 1);
+  transform-origin: 100% 50%;
+}
+
+.Link--small:hover::after {
+  transform: scale3d(1, 1, 1);
+  transform-origin: 0% 50%;
+}
 
 .Contact-title {
   margin-top: 0;
@@ -425,13 +478,13 @@ body {
 }
 
 .Contact-content {
-  display: block; 
+  display: block;
   position: relative;
 }
 
 .Contact-mail {
   cursor: pointer;
-  position: relative; 
+  position: relative;
 }
 
 .Contact-mailTooltip {
@@ -447,7 +500,7 @@ body {
   transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.Contact-mailTooltip.active{
+.Contact-mailTooltip.active {
   opacity: 1;
   pointer-events: none;
   position: absolute;
@@ -460,8 +513,7 @@ body {
   transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-
-.Contact-mailHelp{
+.Contact-mailHelp {
   position: absolute;
   opacity: 0;
   pointer-events: none;
@@ -474,8 +526,7 @@ body {
   transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-
-#copy:hover ~ .Contact-mailHelp{
+#copy:hover~.Contact-mailHelp {
   opacity: 1;
   bottom: 30px;
   left: 125px;
@@ -483,50 +534,41 @@ body {
   transition-delay: 0.3s;
 }
 
-
 /*--------------------Media--------------------*/
 
 @media (max-width: 990px) {
-  .b-canvas{
+  .b-canvas {
     display: block;
     margin: 0 auto;
   }
-
-  .content{
+  .content {
     left: auto;
     top: auto;
-    
   }
-  
- .icons a{
-   text-align: center;
-   width: 100%;
-   
- }
-
-  .title-main{
+  .icons a {
+    text-align: center;
+    width: 100%;
+  }
+  .title-main {
     text-align: center;
   }
-
-  .contact h3{
+  .contact h3 {
     text-align: center;
   }
-  
-  .contact .contact-subtitle{
+  .contact .contact-subtitle {
     text-align: center;
   }
-  #copy:hover ~ .Contact-mailHelp{
+  #copy:hover~.Contact-mailHelp {
     opacity: 0;
   }
 }
 
-
 /*--------------------Loader--------------------*/
 
 .wrapper {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #000;
-    z-index: 2;
-  }
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: #000;
+  z-index: 2;
+}
