--- a/style.css
+++ b/style.css
@@ -364,39 +364,32 @@ html, body {
   max-height: 100vh;
   max-width: 100vw;
   overflow: hidden;
-  /* Remove the copy option in this page */
-  /* -webkit-touch-callout: none; /* iOS Safari */
-  /* -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  /* -khtml-user-select: none;    /* Konqueror */
-  /* -moz-user-select: none;      /* Firefox */
-  /* -ms-user-select: none;       /* Internet Explorer/Edge */
-  /* user-select: none;           /* Non-prefixed version, currently not supported by any browser */
 }
 
 /*--------------------Content--------------------*/
 
 .content {
-  position: absolute;
-  box-sizing: border-box;
-  display: inline-block;
-  top: 5%;
-  left: 5%;
-  text-align: start;
+  max-width: 1280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .title-main {
   text-decoration: none;
   font-weight: 400;
   color: #121212;
-  font-size: 25px;
+  font-size: 48px;
+  line-height: 64px;
 }
 
 .title-main span {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .contact {
-  position: absolute;
+  margin-top: 60px;
   box-sizing: border-box;
   text-align: start;
 }
@@ -537,37 +530,43 @@ html, body {
 /*--------------------Media--------------------*/
 
 @media (max-width: 990px) {
+
   .b-canvas {
     display: block;
     margin: 0 auto;
   }
+
+  .title-main {
+    text-decoration: none;
+    font-weight: 400;
+    color: #121212;
+    font-size: 28px;
+    line-height: 34px;
+  }
+
   .content {
     top: auto;
+    left: 5%;
   }
+
   .icons a {
     text-align: center;
     width: 100%;
   }
+
   .title-main {
     text-align: center;
   }
+  
   .contact h3 {
     text-align: center;
   }
+
   .contact .contact-subtitle {
     text-align: center;
   }
+
   #copy:hover~.Contact-mailHelp {
     opacity: 0;
   }
-}
-
-/*--------------------Loader--------------------*/
-
-.wrapper {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background: #000;
-  z-index: 2;
 }
