--- a/style.css
+++ b/style.css
@@ -567,7 +567,36 @@ html, body {
     text-align: center;
   }
 
-  #copy:hover~.Contact-mailHelp {
-    opacity: 0;
-  }
+  
+   .Contact-mailTooltip {
+     opacity: 0;
+     pointer-events: none;
+     position: relative;
+     display: flex;
+     justify-content: center;
+     bottom: -52px;
+     right: auto;
+     width: 100%;
+     text-align: center;
+     font-size: 14px;
+     font-weight: 400;
+     transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+   }
+
+   .Contact-mailTooltip.active {
+     opacity: 1;
+     pointer-events: none;
+     position: relative;
+     bottom: -28px;
+     right: auto;
+     width: 100%;
+     text-align: center;
+     font-size: 14px;
+     font-weight: 400;
+     transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+   }
+
+    #copy:hover~.Contact-mailHelp {
+     opacity: 0;
+   }
 }
