--- a/style.css
+++ b/style.css
@@ -369,6 +369,7 @@ html, body {
 /*--------------------Content--------------------*/
 
 .content {
+  margin-top: 60px;
   max-width: 1280px;
   padding-left: 20px;
   padding-right: 20px;
@@ -484,8 +485,8 @@ html, body {
   opacity: 0;
   pointer-events: none;
   position: absolute;
-  bottom: -46px;
-  left: 125px;
+  bottom: -52px;
+  right: 243px;
   width: 100%;
   text-align: center;
   font-size: 14px;
@@ -497,8 +498,8 @@ html, body {
   opacity: 1;
   pointer-events: none;
   position: absolute;
-  bottom: -30px;
-  left: 125px;
+  bottom: -28px;
+  right: 243px;
   width: 100%;
   text-align: center;
   font-size: 14px;
@@ -510,8 +511,8 @@ html, body {
   position: absolute;
   opacity: 0;
   pointer-events: none;
-  bottom: 50px;
-  left: 125px;
+  bottom: 52px;
+  right: 243px;
   width: 100%;
   text-align: center;
   font-size: 14px;
@@ -521,8 +522,8 @@ html, body {
 
 #copy:hover~.Contact-mailHelp {
   opacity: 1;
-  bottom: 30px;
-  left: 125px;
+  bottom: 28px;
+  right: 243px;
   transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition-delay: 0.3s;
 }
@@ -566,7 +567,36 @@ html, body {
     text-align: center;
   }
 
-  #copy:hover~.Contact-mailHelp {
-    opacity: 0;
-  }
+.Contact-mailTooltip {
+  opacity: 0;
+  pointer-events: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  bottom: -52px;
+  right: auto;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.Contact-mailTooltip.active {
+  opacity: 1;
+  pointer-events: none;
+  position: relative;
+  bottom: -28px;
+  right: auto;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  transition: 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+#copy:hover~.Contact-mailHelp {
+  opacity: 0;
+}
+
 }
